force-app/main/default/objects/smagicinteract__SMS_Schedule__c/smagicinteract__SMS_Schedule__c.object-meta.xml
<CustomObject>
    <label>SMS Schedule</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>SMS Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Scheduled</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>