force-app/main/default/objects/smagicinteract__SMS_Schedule__c/fields/smagicinteract__Campaign_Statuses__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Campaign_Statuses__c</fullName>
    <description>This field contains the campaign member statuses.</description>
    <label>Campaign Statuses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>