force-app/main/default/objects/smagicinteract__SMS_Schedule__c/fields/smagicinteract__Condition__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Condition__c</fullName>
    <description>To be deprecated.</description>
    <label>Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>