force-app/main/default/objects/smagicinteract__SMS_Schedule__c/fields/smagicinteract__Date__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Date__c</fullName>
    <description>This field contains the date in GMT format.</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>