force-app/main/default/objects/smagicinteract__SMS_Schedule__c/fields/smagicinteract__End_Date__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__End_Date__c</fullName>
    <description>This field contains the end date of schedule.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>