force-app/main/default/objects/smagicinteract__SMS_Schedule__c/fields/smagicinteract__Exclude_Phone_Json__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Exclude_Phone_Json__c</fullName>
    <description>To be deprecated.</description>
    <label>Exclude Phone Json</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>