force-app/main/default/objects/smagicinteract__SMS_Schedule__c/fields/smagicinteract__Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Failure_Reason__c</fullName>
    <description>This field contains the failure reason.</description>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>