force-app/main/default/objects/smagicinteract__SMS_Schedule__c/fields/smagicinteract__isOptout__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__isOptout__c</fullName>
    <description>Select this field to send SMS to OptOut records.</description>
    <label>Send To Optout</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>