force-app/main/default/objects/smagicinteract__SMS_Schedule__c/fields/smagicinteract__isRecurring__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__isRecurring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field contains the value stating if the schedule is recurring.</description>
    <label>isRecurring</label>
    <type>Checkbox</type>
</CustomField>