force-app/main/default/objects/smagicinteract__SMS_Schedule__c/fields/smagicinteract__Job_ID__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Job_ID__c</fullName>
    <description>This field contains the ID of the schedule job.</description>
    <label>Job ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>