force-app/main/default/objects/smagicinteract__SMS_Schedule__c/fields/smagicinteract__List_View_Configuration__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__List_View_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To be deprecated.</description>
    <label>List View Configuration</label>
    <referenceTo>smagicinteract__List_View_Configuration__c</referenceTo>
    <relationshipLabel>SMS Scheduled</relationshipLabel>
    <relationshipName>SMS_Scheduled</relationshipName>
    <type>Lookup</type>
</CustomField>