force-app/main/default/objects/smagicinteract__SMS_Schedule__c/fields/smagicinteract__Name_Field__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Name_Field__c</fullName>
    <description>This field contains the Name field.</description>
    <label>Name Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>