force-app/main/default/objects/smagicinteract__SMS_Schedule__c/fields/smagicinteract__Object__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Object__c</fullName>
    <description>This field contains the name of the message object.</description>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>