force-app/main/default/objects/smagicinteract__SMS_Schedule__c/fields/smagicinteract__Optout_Field__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Optout_Field__c</fullName>
    <description>This field contains the Opt Out field.</description>
    <label>Optout Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>