force-app/main/default/objects/smagicinteract__SMS_Schedule__c/fields/smagicinteract__Phone_Field__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Phone_Field__c</fullName>
    <description>This field contains the Phone field.</description>
    <label>Phone Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>