force-app/main/default/objects/smagicinteract__SMS_Schedule__c/fields/smagicinteract__Record_Ids__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Record_Ids__c</fullName>
    <description>This field contains the ID of the record.</description>
    <label>Record Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>