force-app/main/default/objects/smagicinteract__SMS_Schedule__c/fields/smagicinteract__recursType__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__recursType__c</fullName>
    <description>This field contains the type of schedule. The type can be: daily, monthly, or yearly.</description>
    <label>recursType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>