force-app/main/default/objects/smagicinteract__SMS_Schedule__c/fields/smagicinteract__recursTypeForDaily__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__recursTypeForDaily__c</fullName>
    <description>This field contains the value stating if it is daily recurring schedule.</description>
    <label>recursTypeForDaily</label>
    <length>50</length>
    <type>Text</type>
</CustomField>