force-app/main/default/objects/smagicinteract__SMS_Schedule__c/fields/smagicinteract__recursTypeMonthly__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__recursTypeMonthly__c</fullName>
    <description>This field contains the value stating if it is monthly recurring schedule.</description>
    <label>recursTypeMonthly</label>
    <length>50</length>
    <type>Text</type>
</CustomField>