force-app/main/default/objects/smagicinteract__SMS_Schedule__c/fields/smagicinteract__recursTypeYearly__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__recursTypeYearly__c</fullName>
    <description>This field contains the value stating if it is yearly recurring schedule.</description>
    <label>recursTypeYearly</label>
    <length>50</length>
    <type>Text</type>
</CustomField>