force-app/main/default/objects/smagicinteract__SMS_Schedule__c/fields/smagicinteract__Schedule_JobId__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Schedule_JobId__c</fullName>
    <description>This field contains the value of the random generatedj ob name.</description>
    <label>Schedule JobId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>