force-app/main/default/objects/smagicinteract__SMS_Schedule__c/fields/smagicinteract__Schedule_Name__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Schedule_Name__c</fullName>
    <description>This field contains the scheduled job name.</description>
    <label>Schedule Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>