force-app/main/default/objects/smagicinteract__SMS_Schedule__c/fields/smagicinteract__Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Scheduled_Date__c</fullName>
    <description>This field contains the scheduled date.</description>
    <label>Scheduled Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>