force-app/main/default/objects/smagicinteract__SMS_Schedule__c/fields/smagicinteract__Selected_Days_RecurWeek__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Selected_Days_RecurWeek__c</fullName>
    <description>This field contains the days for weekly recurring.</description>
    <label>Selected Days RecurWeek</label>
    <length>100</length>
    <type>Text</type>
</CustomField>