force-app/main/default/objects/smagicinteract__SMS_Schedule__c/fields/smagicinteract__Selected_Months_RecurYearly__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Selected_Months_RecurYearly__c</fullName>
    <description>This field contains the days for yearly recurring.</description>
    <label>Selected Months RecurYearly</label>
    <length>255</length>
    <type>Text</type>
</CustomField>