force-app/main/default/objects/smagicinteract__SMS_Schedule__c/fields/smagicinteract__Selected_User__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Selected_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the selected user.</description>
    <label>Selected User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SMS_Scheduled</relationshipName>
    <type>Lookup</type>
</CustomField>