force-app/main/default/objects/smagicinteract__SMS_Schedule__c/fields/smagicinteract__selectedDateForYear__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__selectedDateForYear__c</fullName>
    <description>This field contains the selected date for year.</description>
    <label>selectedDateForYear</label>
    <length>50</length>
    <type>Text</type>
</CustomField>