force-app/main/default/objects/smagicinteract__SMS_Schedule__c/fields/smagicinteract__selectedDayForMonth1__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__selectedDayForMonth1__c</fullName>
    <description>This field contains the selected day for start month.</description>
    <label>selectedDayForMonth1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>