force-app/main/default/objects/smagicinteract__SMS_Schedule__c/fields/smagicinteract__selectedDayForMonth2__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__selectedDayForMonth2__c</fullName>
    <description>This field contains the selected day for end month.</description>
    <label>selectedDayForMonth2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>