force-app/main/default/objects/smagicinteract__SMS_Schedule__c/fields/smagicinteract__selectedMonth__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__selectedMonth__c</fullName>
    <description>This field contains the selected month.</description>
    <label>selectedMonth</label>
    <length>50</length>
    <type>Text</type>
</CustomField>