force-app/main/default/objects/smagicinteract__SMS_Schedule__c/fields/smagicinteract__selectedMonthForYear__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__selectedMonthForYear__c</fullName>
    <description>This field contains the selected month for year.</description>
    <label>selectedMonthForYear</label>
    <length>50</length>
    <type>Text</type>
</CustomField>