force-app/main/default/objects/smagicinteract__SMS_Schedule__c/fields/smagicinteract__selectedWeekDayForYear__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__selectedWeekDayForYear__c</fullName>
    <description>This field contains the selected weekday for year.</description>
    <label>selectedWeekDayForYear</label>
    <length>50</length>
    <type>Text</type>
</CustomField>