force-app/main/default/objects/smagicinteract__SMS_Schedule__c/fields/smagicinteract__selectedWeekForMonth__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__selectedWeekForMonth__c</fullName>
    <description>This field contains the selected week for month.</description>
    <label>selectedWeekForMonth</label>
    <length>50</length>
    <type>Text</type>
</CustomField>