force-app/main/default/objects/smagicinteract__SMS_Schedule__c/fields/smagicinteract__selectedWeekForYear__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__selectedWeekForYear__c</fullName>
    <description>This field contains the selected week for year.</description>
    <label>selectedWeekForYear</label>
    <length>50</length>
    <type>Text</type>
</CustomField>