force-app/main/default/objects/smagicinteract__SMS_Schedule__c/fields/smagicinteract__Show_Other_Users__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Show_Other_Users__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be deprecated.</description>
    <label>Show Other Users</label>
    <type>Checkbox</type>
</CustomField>