force-app/main/default/objects/smagicinteract__SMS_Schedule__c/fields/smagicinteract__SMS_Template__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__SMS_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field contains ID of the template.</description>
    <label>SMS Template</label>
    <referenceTo>smagicinteract__SMS_Template__c</referenceTo>
    <relationshipLabel>SMS Scheduled</relationshipLabel>
    <relationshipName>SMS_Scheduled</relationshipName>
    <type>Lookup</type>
</CustomField>