force-app/main/default/objects/smagicinteract__SMS_Schedule__c/fields/smagicinteract__SMS_Text__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__SMS_Text__c</fullName>
    <description>This field contains the SMS text.</description>
    <label>SMS Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>