force-app/main/default/objects/smagicinteract__SMS_Schedule__c/fields/smagicinteract__Template_Id_Json__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Template_Id_Json__c</fullName>
    <description>To be deprecated.</description>
    <label>Template Id Json</label>
    <length>255</length>
    <type>Text</type>
</CustomField>