force-app/main/default/objects/smagicinteract__SMS_Schedule__c/fields/smagicinteract__Unrelated_Object_ID__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Unrelated_Object_ID__c</fullName>
    <description>This field contains the ID of the unrelated object.</description>
    <label>Unrelated Object ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>