force-app/main/default/objects/smagicinteract__SMS_Schedule__c/fields/smagicinteract__Variable_Day_RecurDay__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Variable_Day_RecurDay__c</fullName>
    <description>To be deprecated.</description>
    <label>Variable Day RecurDay</label>
    <length>20</length>
    <type>Text</type>
</CustomField>