force-app/main/default/objects/smagicinteract__SMS_Schedule__c/fields/smagicinteract__variableMonth1__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__variableMonth1__c</fullName>
    <description>To be deprecated.</description>
    <label>variableMonth1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>