force-app/main/default/objects/smagicinteract__SMS_Schedule__c/listViews/smagicinteract__All.listView-meta.xml
<ListView>
    <fullName>smagicinteract__All</fullName>
    <columns>NAME</columns>
    <columns>smagicinteract__Schedule_Name__c</columns>
    <columns>smagicinteract__Job_ID__c</columns>
    <columns>smagicinteract__Object__c</columns>
    <columns>smagicinteract__SMS_Text__c</columns>
    <columns>smagicinteract__Record_Ids__c</columns>
    <columns>smagicinteract__Scheduled_Date__c</columns>
    <columns>smagicinteract__Status__c</columns>
    <columns>smagicinteract__SenderId__c</columns>
    <columns>smagicinteract__isOptout__c</columns>
    <columns>smagicinteract__Failure_Reason__c</columns>
    <columns>smagicinteract__Name_Field__c</columns>
    <columns>smagicinteract__Optout_Field__c</columns>
    <columns>smagicinteract__Phone_Field__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>